--- a/readme
+++ b/readme
@@ -1,1 +1,1 @@
-version mit aangular und server beide commitet unter login version 7.00
+version mit aangular und server beide commitet unter login version 7.00 speichern
